Fix gap issue not supported in Safari

--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ aside {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
 
     margin-top: 16px;
 }
@@ -123,6 +122,7 @@ aside {
 .aside-icons img{
     display: block;
     filter: invert(50%);
+    margin-bottom: 100%;
 
     width: 16px;
     height: auto;
@@ -170,7 +170,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 8px;
     
     font-size: 10px;
     width: var(--footer-width)
@@ -179,6 +178,7 @@ footer {
 .footer-copyright img {
     display: block;
     filter: invert(50%);
+    margin-left: 100%;
 
     width: 12px;
     height: auto;
@@ -218,11 +218,14 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 36px;
 
     list-style: none;
 
     font-size: 24px;
+}
+
+.nav-list li {
+    margin-bottom:50%;
 }
 
 nav a, .nav-list a, a {
@@ -371,7 +374,10 @@ a:visited {
     flex-direction: column;
     margin-bottom: 24px;
     padding: 16px;
-    gap: 24px;
+}
+
+.about-desc p {
+    margin-bottom: 5%;
 }
 
 .about-desc a, a[href="https://www.theodinproject.com/"] {
@@ -385,19 +391,18 @@ a:visited {
     justify-content: center;
     align-items: center;
     margin-bottom: 24px;
-    gap: 24px;
 }
 
 .certs-list {
     display: flex;
     flex-direction: column;
-    gap: 24px;
     margin: 0 16px;
 }
 
 .cert {
     background-color: var(--black);
     padding: 24px;
+    margin: 3%;
 
     border: 1px solid var(--gray-border);
     border-radius: 4px;
@@ -407,7 +412,6 @@ a:visited {
     display: flex;
     flex-direction: column;
     margin-bottom: 24px;
-    gap: 24px;
     justify-content: center;
     align-items: center;
 }
@@ -415,6 +419,7 @@ a:visited {
 .about-tech-stack img {
     height: 64px;
     width: 64px;
+    margin-bottom: 10%;
 }
 
 .tech {
@@ -422,7 +427,7 @@ a:visited {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    margin: 2%;
 }
 
 .tech-stack-icons {
@@ -430,7 +435,6 @@ a:visited {
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-    gap: 24px;
 }
 
 #project {
@@ -441,21 +445,20 @@ a:visited {
 
     display: flex;
     flex-direction: column;
-    gap: 24px;
     padding: 48px 24px;
 }
 
 .project-items { 
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    margin-top: 2%;
 }
 
 .item {
     display: flex;
     flex-direction: column;
     padding: 16px;
-    gap: 8px;
+    margin: 5%;
 
     background-color: var(--gray-bg);
     border-radius: 4px;
@@ -475,7 +478,8 @@ a:visited {
 }
 
 .item img {
-    height: 20%;
+    height: 360px;
+    margin-bottom: 1%;
 }
 
 .icons img {
@@ -486,11 +490,18 @@ a:visited {
 .desc, .links {
     display: flex;
     flex-direction: column;
-    gap: 8px;
 }
 
 .desc p {
     font-size: 14px;
+}
+
+.desc h3, .desc p, .desc div {
+    margin: 1%;
+}
+
+.links a {
+    margin: 1%;
 }
 
 #contact {
@@ -501,7 +512,6 @@ a:visited {
 
     display: flex;
     flex-direction: column;
-    gap: 24px;
     padding: 48px 24px;
 }
 
@@ -509,7 +519,7 @@ a:visited {
     display: flex;
     flex-direction: column;
     padding: 16px;
-    gap: 24px;
+    margin-top: 24px;
 }
 
 .contact {
@@ -518,6 +528,7 @@ a:visited {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 1%;
 
     border: 1px solid var(--gray-border);
     border-radius: 4px;
@@ -530,7 +541,7 @@ a:visited {
 .contact-title {
     display: flex;
     align-items: center;
-    gap: 12px;
+    margin-bottom: 5%;
 }
 
 .contact-title img {
